--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="cache.appcache">
-<head>
+<html><head>
   <meta charset="utf-8">
   <title>2048i</title>
 
@@ -8,16 +7,10 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
-
-  <meta property="og:title" content="2048 game"/>
-  <meta property="og:site_name" content="2048 game"/>
-  <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
 </head>
 <body>
   <div class="container">
@@ -40,7 +33,6 @@
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
           <a class="retry-button">Try again</a>
-          <div class="score-sharing"></div>
         </div>
       </div>
 
@@ -71,9 +63,7 @@
         </div>
       </div>
 
-      <div class="tile-container">
-
-      </div>
+      <div class="tile-container"><div class="tile tile-2048 tile-position-2-4 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-2048 tile-position-3-3 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-16384 tile-position-3-4 tile-new"><div class="tile-inner">16384</div></div><div class="tile tile-1024 tile-position-4-1 tile-new"><div class="tile-inner">1024</div></div><div class="tile tile-2048 tile-position-4-2 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-4096 tile-position-4-3 tile-new"><div class="tile-inner">4096</div></div><div class="tile tile-65536 tile-position-4-4 tile-super tile-new"><div class="tile-inner">65536</div></div></div>
     </div>
 
     <p class="game-explanation">
@@ -83,21 +73,11 @@
     <p>
     <strong class="important">Note:</strong> This site is NOT the official version of 2048. You can play the original via <a href="http://git.io/2048">http://git.io/2048.</a>
     </p>
-    <hr>
-    <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out 2048i, a game where you join numbers to score high! #2048game" data-via="the_deange" data-url="http://cdeange.github.io/2048" data-counturl="http://cdeange.github.io/2048/">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-      <span class="btc-donate">
-        <a href="bitcoin:1MczZpiLS1gYC2buMUsDKCxd1yTJFD4TDh">
-          <img src="meta/icon_bitcoin.svg">Donate BTC
-        </a>
-        <span class="address"><code>1MczZpiLS1gYC2buMUsDKCxd1yTJFD4TDh</code></span>
-      </span>
-
-    </div>
+	  
   </div>
 
+  <script src="js/bind_polyfill.js"></script>
+  <script src="js/classlist_polyfill.js"></script>
   <script src="js/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
@@ -107,15 +87,5 @@
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-49661900-1', 'cdeange.github.io');
-    ga('send', 'pageview');
-
-  </script>
-</body>
-</html>
+</body></html>
