--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="tile-container"><div class="tile tile-2048 tile-position-2-4 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-2048 tile-position-3-3 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-16384 tile-position-3-4 tile-new"><div class="tile-inner">16384</div></div><div class="tile tile-1024 tile-position-4-1 tile-new"><div class="tile-inner">1024</div></div><div class="tile tile-2048 tile-position-4-2 tile-new"><div class="tile-inner">2048</div></div><div class="tile tile-4096 tile-position-4-3 tile-new"><div class="tile-inner">4096</div></div><div class="tile tile-65536 tile-position-4-4 tile-super tile-new"><div class="tile-inner">65536</div></div></div>
+      <div class="tile-container"></div>
     </div>
 
     <p class="game-explanation">
